* Moved pyrrd/utils.py to pyrrd/util/__init__.py.
* Added pyrrd.util.dist.
* Updated setup.py to use meta as well as the new dist utility.
* Moved INSTALL content into README.
* Moved acknowledgements out of README and into their own file.
* Added file cleanups in doctests.
* Updated MANIFEST to include new docs and removed references to files that no
longer exist.

2009.03.23

* Added a file manifest so that files don't get left out during build process.
* Updated setup.py.
* Updated TODO.
* Incremented microversion to 0.0.6 since this is a bug fix (manifest file).
* Really incremented version.

2009.03.21

* Received the following fixes from Aaron Westendorf of Agora Games:
  - Moved pyrrd.xml to pyrrd.__xml to not conflict with stdlib xml namespace.
  - Fixed loading of existing RRDs when expected attributes are not there,
    specifically when RRAs are for Holt-Winters.
* Renamed __xml to node.
* Updated unit tests.
* Added missing docstrings.
* Formatted contributed code.
* Removed the Agora notes file
* Updated version.
* Added a dist-building script.
* Updated the clean script.
* Incremented microversion number to 0.0.5 (committed this change earlier).
* Updated acknowledgements section in README.
* Updated install instructions with a note about a conditional dependency.

2009.01.31

* Removed ez_setup dependence.
* Fixed old parameter name in example.
* Added shell script for testing example code.
* Updated TODO.
* Updated the RRD class so that manual calls to load are not necessary if an
RRD instance is created with the mode="r" parameter.
* Updated TODO.

2009.01.30

* Changed the rrd.* classes to inherit from the mapper.* classes.
* Added last update tracking.
* Updated RRD.load to use the mapper map method.
* Cleaned up some variable names and comments.
* Added missing mapper module.
* Added printInfo method to the base mapper class.
* Updated the RRD.info method to use the printInfo mapper method.
* Added support for printing info of loaded RRD files.